# phenoboard

./: .gitignore  .prettierignore  .stylelintrc.json  404.html  README.md  angular.html  angular.json  eslint.config.js  index.html  internal.html  mkdocs.yml  nx.json  package-lock.json  package.json  project.json  styles.html  tailwind.config.js  tsconfig.base.json  tsconfig.json
.github/workflows/: build-tauri.yml  documentation.yml
angular/: index.html
book/: SUMMARY.md  book.toml
book/src/: SUMMARY.md  applications.md  introduction.md
book/src/applications/: applications.md  gpsea.md
book/src/background/: hpo.md  phenopackets.md
book/src/developers/: angular.md  jscript.md  linux.md  overview.md  release.md
book/src/help/: case.md  cohort-editor.md  installation.md  newcohort.md  overview.md  start.md  startpage.md  table-editor.md  variant-data.md  variants.md
book/src/theme/: custom.css
book/src/variants/: structural.md
book/theme/: custom.css
developers/: angular_tips.html  hpo-sorting.html  index.html  jscript.html  overview.html
developers/angular_tips/: index.html
developers/building/: index.html
developers/hpo-sorting/: index.html
developers/jscript/: index.html
developers/overview/: index.html
docs/: angular.md  developers.md  index.md  internal.md  introduction.md  package-lock.json  package.json  styles.md
docs/.vitepress/: config.js
docs/applications/: applications.md  gpsea.md  validation.md
docs/background/: hpo.md  phenopackets.md
docs/developers/: angular.md  angular_tips.md  building.md  hpo-sorting.md  overview.md  practical.md
docs/help/: case.md  cohort-editor.md  cohort-type.md  installation.md  newcohort.md  repo.md  start.md  startpage.md  table-editor.md
docs/variants/: overview.md  structural.md
internal/: index.html
libs/ui/: project.json  tsconfig.json
libs/ui/src/: public-api.ts
search/: search_index.json
src/: index.html  main.ts  splash.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: directory_manager.rs  hpo_curator.rs  hpo_mining.rs  hpo_version_checker.rs  lib.rs  main.rs  phenoboard.rs  ppt_table.rs  settings.rs  table_manager.rs
src-tauri/src/dto/: mod.rs  pmid_dto.rs  status_dto.rs  text_annotation_dto.rs
src-tauri/src/hpo/: hpo_etl.rs  hpo_version_checker.rs  mod.rs  ontology_loader.rs
src-tauri/src/util/: demographics_dialog.rs  hgnc_rest.rs  io_util.rs  mod.rs  pubmed_retrieval.rs  text_to_annotation.rs
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts  main.ts
src/app/addages/: addage.component.css  addage.component.html  addage.component.scss  addage.component.spec.ts  addage.component.ts  addages.component.css  addages.component.html  addages.component.spec.ts  addages.component.ts
src/app/addcase/: addcase.component.css  addcase.component.html  addcase.component.scss  addcase.component.spec.ts  addcase.component.ts  confirmdialog.component.ts
src/app/adddemo/: adddemo.component.css  adddemo.component.html  adddemo.component.scss  adddemo.component.spec.ts  adddemo.component.ts  demoformdialog.component.html  demoformdialog.component.ts
src/app/addvariant/: addvariant.component.css  addvariant.component.html  addvariant.component.scss  addvariant.component.spec.ts  addvariant.component.ts
src/app/cellreview/: cell-row-editor.component.html  cell-row-editor.component.ts  cellreview.component.html  cellreview.component.scss  cellreview.component.ts  mined-cell-editor.component.html  mined-cell-editor.component.scss  mined-cell-editor.component.ts
src/app/clipboard/: clipboard.component.html  clipboard.component.ts
src/app/cohortdialog/: cohortdialog.component.css  cohortdialog.component.html  cohortdialog.component.scss  cohortdialog.component.spec.ts  cohortdialog.component.ts
src/app/cohortsummary/: cohortsummary.component.html  cohortsummary.component.scss  cohortsummary.component.spec.ts  cohortsummary.component.ts
src/app/confirm/: confirmation-dialog.component.css  confirmation-dialog.component.html  confirmation-dialog.component.ts
src/app/directives/: disease-id.directive.ts  trim.directive.ts
src/app/disease_edit/: disease_edit.component.css  disease_edit.component.html  disease_edit.component.spec.ts  disease_edit.component.ts
src/app/etl_cell/: etl-cell-edit-dialog.component.html  etl-cell-edit-dialog.component.scss  etl-cell-edit-dialog.component.ts  etlcell.component.css  etlcell.component.html  etlcell.component.spec.ts  etlcell.component.ts
src/app/etl_column_edit/: etl_column_edit.component.html  etl_column_edit.component.spec.ts  etl_column_edit.component.ts
src/app/footer/: footer.component.css  footer.component.html  footer.component.scss  footer.component.spec.ts  footer.component.ts
src/app/gene_edit/: gene_edit.component.html  gene_edit.component.spec.ts  gene_edit.component.ts
src/styles/: _animations.scss  _buttons.scss  _forms.scss  _layout.scss  _modals.scss  _snackbars.scss  _status.scss  _tables.scss  _titles.scss  _typography.scss  _variables.scss
styles/: index.html
(+239 files in other folders)
