[package]
name = "phenoboard"
version = "0.5.27"
description = "Curate cohorts of GA4GH Phenopackets"
authors = ["Peter N Robinson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "phenoboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0"
html-escape = "0.2.13"
fuzzy-matcher = "0.3"
ontolius = "0.7.1" 
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
rfd = { version = "0.16.0", default-features = false}
fenominal = { git = 'https://github.com/P2GX/fenominal.git',  tag = '0.1.18' }
ga4ghphetools = { git = 'https://github.com/P2GX/ga4ghphetools.git', tag = '0.4.148' }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-opener = "2.5.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
regex = "1.11.1"
deunicode = "1.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.16.0", default-features = false, features = ["xdg-portal", "tokio"] }









